# ogre_demo

./: CMakeLists.txt
include/: ogre_demo.h
src/: camera.cpp  ground.cpp  lighting.cpp  main.cpp  ogre_demo.cpp  scene.cpp  utilities.cpp
